--- a/src/custom.scss
+++ b/src/custom.scss
@@ -1,5 +1,6 @@
 @import '~bootstrap/scss/bootstrap.scss';
-@import url('https://fonts.googleapis.com/css?family=Handlee');
+@import url('https://fonts.googleapis.com/css?family=Sacramento&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Cinzel|Raleway&display=swap');
 
 @font-face {
   font-family: 'gartonmedium';
@@ -21,52 +22,53 @@
 //   "dark":       ..
 // );
 
-$primary: #738A5C;
+$primary: rgb(255, 249, 234);
 $primary-light: #ABBA9A;
-$highlight: #ECCAB8;
-$accent: #CD6E3D;
+$highlight: #6E0000;
+$accent: #E19C2C;
 $accent-strong: #631C1D;
+$med-grey: #555;
 
 
 
 html, body, #root {
   height: 100%;
-  font-family: 'Handlee';
+  font-family: 'Raleway';
 }
 
 div.App {
   height: 100%;
 }
 
-div.App {
-  // background: url("./photos/splashPage.jpg");
+// div.App {
+//   // background: url("./photos/splashPage.jpg");
 
-  @media screen and (min-width: 721px) and (orientation: landscape){
-    background: url("./photos/splashPageLarge.jpg");
-  }
+//   @media screen and (min-width: 721px) and (orientation: landscape){
+//     background: url("./photos/splashPageLarge.jpg");
+//   }
 
-  @media screen and (max-width: 720px) and (orientation: landscape){
-    background: url("./photos/splashPageSmall.jpg");
-  }
+//   @media screen and (max-width: 720px) and (orientation: landscape){
+//     background: url("./photos/splashPageSmall.jpg");
+//   }
 
-  @media screen and (min-height: 541px) and (orientation: portrait){
-    background: url("./photos/splashPageLarge.jpg");
-  }
+//   @media screen and (min-height: 541px) and (orientation: portrait){
+//     background: url("./photos/splashPageLarge.jpg");
+//   }
 
-  @media screen and (max-height: 540px) and (orientation: portrait){
-    background: url("./photos/splashPageSmall.jpg");
-  }
+//   @media screen and (max-height: 540px) and (orientation: portrait){
+//     background: url("./photos/splashPageSmall.jpg");
+//   }
 
-  @media all and (orientation: landscape) {
-    background-size: cover;
-    background-position-x: 50%;
-  }
+//   @media all and (orientation: landscape) {
+//     background-size: cover;
+//     background-position-x: 50%;
+//   }
 
-  @media all and (orientation: portrait) {
-    background-size: auto 100%;
-    background-position-x: 50%;
-  }
-}
+//   @media all and (orientation: portrait) {
+//     background-size: auto 100%;
+//     background-position-x: 50%;
+//   }
+// }
 
 .photoCover {
   background-color: rgba(0, 0, 0, 0.3);
@@ -92,7 +94,6 @@ div.App {
   position: absolute;
   height: 100%;
   width: 100%;
-  font-family: 'gartonmedium';
 
   div {
     height: 100%;
@@ -101,11 +102,6 @@ div.App {
     opacity: 1;
     transition: opacity 1s linear;
     transition-delay: 1s;
-
-    &.hidden {
-      opacity: 0;
-      transition-delay: 0s;
-    }
 
     img {
       position: absolute;
@@ -127,37 +123,110 @@ div.App {
   }
 }
 
-.Announcement {
-  position: absolute;
-  top: 0px;
-  left: 0px;
-
-  color: rgba(255, 255, 255,0.7);
-  padding-top: 20px;
-  padding-left: 20px;
-  z-index: 10;
-
-  .name {
-    color: $highlight;
-  }
-
-  h1 {
-    @media screen and (orientation: landscape) {
-      font-size: 64px;
-    }
-
-    @media screen and (orientation: portrait) {
-      font-size: 50px;
-    }
-  }
-}
-
-#Sidebar {
-  background-color: $primary-light;
+#Announcement {
+  background-color: $primary;
   width: 100%;
   min-height: 100%;
   padding: 30px;
-  box-shadow: -2px 0px 5px 1px #555;
+  box-shadow: -2px 0px 5px 1px $med-grey;
+  z-index: 2;
+  font-family: 'Cinzel';
+
+  position: relative;
+  left: 0%;
+  top: 0%;
+
+  @media screen and (orientation: landscape) {
+    padding-top: 150px;
+  }
+
+  @media screen and (orientation: portrait) {
+    padding-top: 100px;
+  }
+  
+  .header {
+    color: #666;
+    font-family: 'gartonmedium';
+    font-size: 40px;
+
+    .name {
+      font-family: 'gartonmedium';
+      color: $highlight;
+      
+      @media screen and (orientation: landscape) {
+        font-size: 60px;
+      }
+  
+      @media screen and (orientation: portrait) {
+        font-size: 50px;
+      }
+
+      display: inline-block;
+    }
+  
+    .and {
+      color: $accent;
+      font-family: 'Sacramento', cursive;
+      font-size: 50px;
+
+      line-height: 10px;
+    }
+  }
+
+  .weddingDate {
+    font-size: 2.5rem;
+    color: $med-grey;
+    display: block;
+    font-family: 'Sacramento', cursive;
+  }
+
+  #divider {
+    max-width: 100%;
+    max-height: 100%;
+    margin: 20px 0px;
+
+    .leaf {
+      width: 30px;
+    }
+
+    .acorn {
+      width: 30px;
+      margin: 10px;
+    }
+
+    .left {
+      transform: rotate(-100deg);
+    }
+
+    .right {
+      transform: rotate(80deg);
+    }
+  }
+
+  .subtitle {
+    font-family: 'Cinzel', serif;
+    font-size: 20px;
+    color: #666;
+    display: inline-block;
+  }
+  
+}
+
+.welcome-button {
+  margin-top: 15px;
+  padding: 5px;
+
+  border: 2px solid $accent;
+  border-radius: 5px;
+  display: inline-block;
+}
+
+#Sidebar {
+  background-color: $primary;
+  width: 100%;
+  min-height: 100%;
+  padding: 20px;
+  box-shadow: -2px 0px 5px 1px $med-grey;
   z-index: 2;
 
   position: relative;
@@ -168,20 +237,13 @@ div.App {
     overflow-y: scroll;
     height: 100%;
     transition: left 1.0s 0s;
-    
-  
-    &.hidden {
-      box-shadow: 0px 0px 0px 0px #555;
-      transition-delay: 1s;
-      left: 100%;
-      top: 0%;
-      //padding: 0px;
-    }
   }
 }
 
 #SidebarMenu {
+  margin-bottom: 10px;
   font-size: 23px;
+  font-family: 'gartonmedium', serif;
   @include media-breakpoint-up(md) { font-size: 25px;}
   @include media-breakpoint-up(xl) { font-size: 30px;}
 
@@ -190,12 +252,13 @@ div.App {
     display: inline-block;
     margin: 5px 10px;
     padding: 0px 10px;
-    border-bottom: 3px solid rgba($accent-strong, 0.1);
+    border-bottom: 3px solid rgba($accent, 0.3);
 
     &.selected {
       font-weight: bold;
       border-bottom: 3px solid rgba($accent, 0.99);
       transition: border-bottom 1s;
+      color: $highlight;
     }
   }
 }
@@ -203,23 +266,16 @@ div.App {
 #sidebarContainer {
   height: 100%;
   width: 100%;
-
-  &.sidebarHidden {
-    @include media-breakpoint-up(md) { 
-      width: 0%; 
-      overflow-x: hidden;
-    }
-  }
 }
 
 #SidebarContent {
   background-color: rgba($primary, 0.7);
-  box-shadow: -3px 3px 10px 0px #555;
+  box-shadow: -3px 3px 10px 0px $med-grey;
   padding: 20px 0px;
 }
 
 .mapContainer {
-  padding: 10px;
+  padding: 25px;
 }
 
 #map {
@@ -229,6 +285,7 @@ div.App {
   left: 0;
   width: 100%;
   height: 400px;
+  border: 0px solid rgba($accent, 0.7);
 }
 
 #Rsvp {
@@ -236,7 +293,7 @@ div.App {
   text-align: left;
 
   label {
-    font-size: 1.3rem;
+    font-size: 1.1rem;
     color: black;
   }
 
@@ -244,6 +301,25 @@ div.App {
     font-size: 0.85rem;
     color: black;
   }
+}
+
+.myButton {
+  background-color: rgba($accent, 0.2);
+  margin-top: 15px;
+  padding: 5px 10px;
+  color: black;
+
+  border: 2px solid $accent;
+  border-radius: 5px;
+  display: inline-block;
+
+  font-size: 18px;
+
+  &:hover {
+    background-color: rgba($accent, 0.4);
+    transition: 1s;
+  }
+  transition: 0.7s;
 }
 
 .attendingDependent {
@@ -254,12 +330,82 @@ div.App {
   margin-bottom: 5%;
 }
 
-.btn.btn-primary  {
-  background-color: $accent;
-  border-color: $accent;
+.serifText {
+  font-family: 'Cinzel', serif;
+}
 
-  &:hover {
-    background-color: $accent-strong;
-    border-color: $accent-strong;
+.formErrors {
+  color: $highlight;
+  
+  ul {
+    list-style-type: none;
+    padding-left: 0px;
   }
+}
+
+#Gifts {
+  padding: 10px 25px;
+
+  .address {
+    display: inline-block;
+    font-size: 0.9rem;
+    margin-top: -20px;
+  }
+
+  .registryLink {
+    a {
+      color: $accent;
+      font-weight: bolder;
+      margin: 15px 0px;
+      font-size: 1.5rem;
+      font-family: 'Cinzel', serif;
+
+      text-decoration-line: underline;
+
+      &:hover {
+        color: rgb(255, 157, 0);
+      }
+    }
+
+  }
+}
+
+#Explore {
+  padding: 10px 25px;
+
+  .address {
+    display: inline-block;
+    font-size: 0.9rem;
+    margin-top: -20px;
+  }
+
+  .registryLink {
+    margin: 15px 0px;
+  }
+
+  img {
+    width: 100%;
+    display: block;
+    border-radius: 5px;
+    margin: 10px 0px;
+    opacity: 0.8;
+    box-shadow: -3px 3px 5px 1px #555;
+  }
+
+  ul {
+    list-style: none;
+    padding: 10px;
+
+    a {
+      color: $accent;
+
+      &:visited {
+        color: $accent;
+      }
+    }
+  }
+}
+
+#Details {
+  padding: 10px 25px;
 }
