--- a/src/custom.scss
+++ b/src/custom.scss
@@ -178,6 +178,7 @@ div.App {
   border: 2px solid $accent;
   border-radius: 5px;
   display: inline-block;
+  cursor: pointer;
 }
 
 #Sidebar {
@@ -212,6 +213,7 @@ div.App {
     margin: 5px 10px;
     padding: 0px 10px;
     border-bottom: 3px solid rgba($accent, 0.3);
+    cursor: pointer;
 
     &.selected {
       font-weight: bold;
@@ -273,6 +275,7 @@ div.App {
   display: inline-block;
 
   font-size: 18px;
+  cursor: pointer;
 
   &:hover {
     background-color: rgba($accent, 0.4);
@@ -367,6 +370,15 @@ div.App {
 
 #Details {
   padding: 10px 25px;
+
+  .marker {
+    background-image: url('./photos/marker.png');
+    background-size: cover;
+    width: 40px;
+    height: 40px;
+    margin-top: -20px;
+    cursor: pointer;
+  }
 }
 
 .DetailItem {
