--- a/src/custom.scss
+++ b/src/custom.scss
@@ -235,19 +235,7 @@ div.App {
   padding: 20px 0px;
 }
 
-.mapContainer {
-  padding: 25px;
-}
 
-#map {
-  text-align: left;
-  position: relative;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 400px;
-  border: 0px solid rgba($accent, 0.7);
-}
 
 #Rsvp {
   padding: 0px 10px;
@@ -378,6 +366,32 @@ div.App {
     height: 40px;
     margin-top: -20px;
     cursor: pointer;
+  }
+
+  img {
+    width: 100%;
+    display: block;
+    border-radius: 5px;
+    margin: 10px 0px;
+    opacity: 0.8;
+    box-shadow: -3px 3px 5px 1px #555;
+  }
+
+  .mapContainer {
+    padding: 0px;
+  }
+  
+  #map {
+    text-align: left;
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 300px;
+    border: 0px solid rgba($accent, 0.7);
+    border-radius: 5px;
+    box-shadow: -3px 3px 5px 1px #555;
+    opacity: 0.8;
   }
 }
 
